# template_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app-logs-200.dropped.txt  app-logs-200.json  app-logs-200.ndjson  developer_instructions.md  docker-compose.yml  env.example  project_description.md  pyproject.toml  pytest.ini
.docker/: .token_seed
.docker/buildx/: .buildNodeID
.github/: PULL_REQUEST_TEMPLATE.md  README.md  labels.yml
.github/workflows/: ci.yml  create-phase-issues.yml  sync-labels.yml
Internal Project Docs/: cloud_readiness_instructions.md  developer_instructions.md
Internal Project Docs/PR Markdowns/: pr-milestone1.md  pr-milestone4.md
Internal Project Docs/phase-01/: phase-01-summary.md
Internal Project Docs/phase-01/PR Markdowns/: pr-milestone2.md  pr-milestone3.md  pr-milestone5.md  pr-milestone6.md  (+2 more)
backend/: README.md  alembic.ini
backend/alembic/: env.py  script.py.mako
backend/app/: README.md  main.py
backend/docs/: ARCHITECTURE.md  AUTH_MODEL.md  ERROR_MODEL.md  INVENTORY.md  ONBOARDING.md  PHASE1_BASELINE.md  PROD_HARDENING.md  RATE_LIMITING.md
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_health.py  test_persistence.py  test_prod_hardening_cache.py  test_prod_hardening_errors.py  test_prod_hardening_rate_limit.py  test_prod_hardening_telemetry.py  test_v1_health.py  test_v1_users.py
project description and milestones/: milestones.md
scripts/: README.md
scripts/automated_tests/: verify_prod_hardening.py
scripts/docker_logs/: export_docker_logs_json.py
(+81 files in other folders)
