[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "template-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "pydantic-settings==2.6.1",
  "psycopg[binary]==3.2.3",
  "redis==5.0.8",
  "SQLAlchemy==2.0.36",
  "alembic==1.14.0",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "isort==5.13.2",
  "ruff==0.8.4",
  "pytest==8.3.4",
  "httpx==0.27.2",
  "pre-commit==4.0.1",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Keep Ruff focused on linting; import sorting is handled by isort (make fmt + pre-commit).
select = ["E", "F"]


